--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -20,10 +20,14 @@
         </div>
 
         <a href="#" class="d-block mt-4 text-decoration-none fw-bold">
-          <%= image_tag("facebook.png",class: "facebook") %>
+          <%= image_tag("facebook.png", class: "facebook") %>
           Log in with Facebook
         </a>
-
+        <% if notice %>
+          <p class="notice"><%= notice %></p>
+        <% elsif alert %>
+          <p class="alert"><%= alert %></p>
+        <% end %>
         <a href="#" class="fs-6 d-block my-4 text-decoration-none">forgot password?</a>
       </div>
     </div>
