--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,4 +1,4 @@
-<div id="<%= dom_id post %>">
+<div class="d-flex justify-content-center mt-4" id="<%= dom_id post %>">
 
   <div class="card" style="width: 25rem;">
     <div class="card-header bg-white">
