--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,14 +1,18 @@
 <p style="color: green"><%= notice %></p>
-
-<h1>Posts</h1>
-
-<div id="posts">
-  <% @posts.each do |post| %>
-    <%= render post %>
-    <p>
-      <%= link_to "Show this post", post %>
-    </p>
-  <% end %>
+<div class="d-flex justify-content-center mt-4">
+  <h1>Posts</h1>
+</div>
+<div class="d-flex justify-content-center mt-4">
+  <div id="posts">
+    <% @posts.each do |post| %>
+      <%= render post %>
+      <p>
+        <%= link_to "Show this post", post %>
+      </p>
+    <% end %>
+  </div>
+</div>
+<div class="d-flex justify-content-center mt-4">
+  <%= link_to "New post", new_post_path %>
 </div>
 
-<%= link_to "New post", new_post_path %>
