--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,5 +1,14 @@
-<h1>This is the home page</h1>
+<div class="d-flex my-5 justify-content-center gap-4">
+  <div class="d-flex flex-column gap-3">
+    <%= render 'story/stories_list' %>
+    <div class="flex flex-column">
+   <%current_user.posts.each do |p| %>
+      <%=render 'posts/post', post: p %>
 
-<% if current_user %>
-  <%= button_to "Delete", destroy_user_session_path, method: :delete %>
-<% end %>
+      <% end %>
+    </div>
+  </div>
+  <div>
+    <%= render 'suggestions/suggestions_list' %>
+  </div>
+</div>
