--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -24,12 +24,19 @@
         <i class="fa-regular fa-heart fa-xl"></i>
         <i class="fa-sharp fa-solid fa-compass fa-xl"></i>
 
-        <% if current_user && current_user.profile_picture.attached? %>
-          <%= image_tag current_user.profile_picture, class: "img-thumbnail rounded-circle", style: "width: 2rem" %>
-        <% else %>
-          <%= image_tag "default_profile_picture.png", class: "img-thumbnail rounded-circle", style: "width: 2rem" %>
+        <div class="dropdown">
+          <a class="" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+            <% if current_user && current_user.profile_picture.attached? %>
+              <%= image_tag current_user.profile_picture, class: "img-thumbnail rounded-circle", style: "width: 2rem" %>
+            <% else %>
+              <%= image_tag "default_profile_picture.png", class: "img-thumbnail rounded-circle", style: "width: 2rem" %>
+            <% end %>
+          </a>
+          <ul class="dropdown-menu">
+              <%=button_to "Log out ", destroy_user_session_path, class: "dropdown-item" , method: :delete%>
+          </ul>
+        </div>
 
-        <% end %>
       </div>
     </div>
 
