--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,10 +11,10 @@
 </head>
 
 <body>
+<%if current_user %>
 <%= render 'layouts/navbar' %>
-<div class="d-flex align-items-center justify-content-center mt-4">
-  <%= render 'suggestions/suggestions_list' %>
-</div>
+  <%end %>
+
 <%= yield %>
 </body>
 </html>
