Adding new post modal

--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -18,9 +18,12 @@
           <i class="fa-solid fa-house fa-xl"></i>
         <% end %>
         <i class="fa-brands fa-facebook-messenger fa-xl"></i>
-        <%= link_to new_post_path, class: "text-dark" do %>
+
+        <!-- Button trigger modal -->
+        <a type="button" class="text-dark" data-bs-toggle="modal" data-bs-target="#exampleModal">
           <i class="fa-solid fa-square-plus fa-xl"></i>
-        <% end %>
+        </a>
+
         <i class="fa-regular fa-heart fa-xl"></i>
         <i class="fa-sharp fa-solid fa-compass fa-xl"></i>
 
@@ -36,9 +39,9 @@
               <%=button_to "Log out ", destroy_user_session_path, class: "dropdown-item" , method: :delete%>
           </ul>
         </div>
-
       </div>
     </div>
-
   </div>
 </nav>
+
+<%= render 'posts/form', post: Post.new %>
